# algorithm_visualizer_raylib

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.ini  run.ps1  run.sh
src/: main.cpp
